# prod

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
adapters/: replay.py
adapters/broker/: alpaca.py
adapters/data/: ibkr.py
domain/: __init__.py  market.py  orders.py  portfolio.py  ports.py  strategy.py
observability/: __init__.py  events.py  health.py  status.py
runtime/: __init__.py  app.py  composition.py  config.py  context.py  data_hub.py  errors.py  execution_engine.py  factories.py  portfolio_engine.py  reasons.py  recovery.py  registry.py  risk_engine.py  scheduler.py  strategy_runner.py  supervisor.py
strategies/: dummy.py
tests/: conftest.py  test_new_config_observability.py  test_new_domain_contracts.py  test_new_runtime_scenarios.py  test_new_runtime_units.py  test_new_strategies_cli.py  test_package_shape.py  test_runtime_object_boundaries.py
