[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prod"
version = "3.0.0"
description = "Lightweight production trading runtime"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.0",
    "ib_async>=1.0.3",
    "numpy>=1.26.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
prod = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main"]

[tool.setuptools.packages.find]
include = ["adapters*", "domain*", "observability*", "runtime*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
